--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mapbox-gl": "^3.18.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "remixicon": "^4.9.1"
   },
   "devDependencies": {
