--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+# ===========================================
+# Pollar React - Environment Variables
+# ===========================================
+# Copy this file to .env.local for local development
+# Do NOT commit .env.local to version control
+#
+# For Railway deployment:
+# Set these variables in Railway dashboard → Variables
+# ===========================================
+
 # API Base URL
+# The base URL for the Pollar backend API (without trailing slash)
+# Default (if not set): https://pollar.up.railway.app/api
 VITE_API_BASE=https://pollar.up.railway.app/api
