--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
+  "framework": "vite",
+  "devCommand": "vite --port $PORT",
+  "buildCommand": "vite build",
+  "outputDirectory": "dist",
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/((?!api/).*)", "destination": "/index.html" }
   ]
 }
