--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.21.2",
     "@tanstack/react-virtual": "^3.13.18",
     "@types/mapbox-gl": "^3.4.1",
-        "chart.js": "^4.5.1",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^4.21.2",
     "framer-motion": "^12.30.0",
     "lucide-react": "^0.563.0",
     "mapbox-gl": "^3.18.1",
@@ -26,6 +26,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "remixicon": "^4.9.1",
+    "sharp": "^0.34.5",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.11"
