--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.21.2",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.30.0",
     "lucide-react": "^0.563.0",
     "mapbox-gl": "^3.18.1",
@@ -27,6 +28,7 @@
     "react-router-dom": "^7.13.0",
     "remixicon": "^4.9.1",
     "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.11"
